Edited notebook and added notebook section in README

--- a/pydub/voice_standardize_examples.ipynb
+++ b/pydub/voice_standardize_examples.ipynb
@@ -13,9 +13,7 @@
    "id": "df83e9af",
    "metadata": {},
    "source": [
-    "This Jupyter Notebook is part of a larger voice feature extraction toolkit developed to study brain ageing by means of voice features\n",
-    "\n",
-    "Specifically, this noteook contains examples of how to use pydub to standardize digital voice audio files with varying metadata"
+    "This repository contains scripts that show examples of how to use Pydub to standardize digital voice audio files with varying metadata to a standard format. It is part of a larger voice feature extraction toolkit developed to study brain ageing by means of voice features.\n"
    ]
   },
   {
@@ -23,7 +21,7 @@
    "id": "d7a73752",
    "metadata": {},
    "source": [
-    "## Installation instructions"
+    "## Installation Instructions"
    ]
   },
   {
@@ -31,8 +29,8 @@
    "id": "ef9a9667",
    "metadata": {},
    "source": [
-    "For specific Installation and Ffmpeg instructions\n",
-    "[View README](README.md)\n"
+    "For specific installation and FFmpeg instructions,\n",
+    "[view README](https://github.com/Digital-Working-Group/voice-standardize/blob/main/pydub/README.md#installation)\n"
    ]
   },
   {
@@ -48,7 +46,7 @@
    "id": "28383ba6",
    "metadata": {},
    "source": [
-    "The files refered to in these examples are sample audio files with varying formats and metadata. Each audio file's metadata is captured in a JSON and CSV file.\n"
+    "The files referred to in these examples are sample audio files with varying formats and metadata. Each audio file's metadata is captured in a JSON and CSV file.\n"
    ]
   },
   {
@@ -65,12 +63,12 @@
    "id": "95e9af8b",
    "metadata": {},
    "source": [
-    "The following files are example files used to demonstrate the standardization process"
+    "The following files are example files used to demonstrate the standardization process."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "0179aaab",
    "metadata": {},
    "outputs": [],
@@ -92,12 +90,12 @@
    "source": [
     "The following files were generated using the write_metadata function, which takes a file and arguments as input and writes this metadata to the files.\n",
     "\n",
-    "This outputs JSON and CSV files that capture the metadata for the file specified, appending the FFmpeg command used to create the file and the equivalent pydub command to the end of the JSON."
+    "This outputs JSON and CSV files that capture the metadata for the specified file, appending the FFmpeg command used to create the file and the equivalent Pydub command to the end of the JSON."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "8bcbc248",
    "metadata": {},
    "outputs": [
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "6a1abf22",
    "metadata": {},
    "outputs": [
@@ -176,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "649e1131",
    "metadata": {},
    "outputs": [],
@@ -189,7 +187,7 @@
    "id": "ee406561",
    "metadata": {},
    "source": [
-    "### Convert to 16KHZ wav pcm_s16le"
+    "### Convert to 16KHZ WAV PCM_S16LE"
    ]
   },
   {
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "9b497e44",
    "metadata": {},
    "outputs": [
@@ -259,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "c0952efc",
    "metadata": {},
    "outputs": [
@@ -293,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "16a114fe",
    "metadata": {},
    "outputs": [
@@ -327,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "9e1f13fd",
    "metadata": {},
    "outputs": [
@@ -362,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "6ca3f8d9",
    "metadata": {},
    "outputs": [
@@ -397,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "7b2ef2b4",
    "metadata": {},
    "outputs": [
@@ -432,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "0c56547e",
    "metadata": {},
    "outputs": [
@@ -462,7 +460,7 @@
    "id": "c73623bb",
    "metadata": {},
    "source": [
-    "### Convert to 16KHZ wav pcm_s16ble stereo to mono"
+    "### Convert to 16kHz WAV PCM_S16BE Stereo to Mono"
    ]
   },
   {
@@ -470,7 +468,7 @@
    "id": "d1ca9a9f",
    "metadata": {},
    "source": [
-    "Using the Standardize() function, the following code block standardizes the example audio files to a sampling rate of 16,000 Hz, waveform audio file format, 16-bit out-encoding, and a single channel."
+    "Using the standardize() function, the following code block standardizes the example audio files to a sampling rate of 16,000 Hz, Waveform Audio File Format, 16-bit output-encoding, and a single channel."
    ]
   },
   {
@@ -478,12 +476,12 @@
    "id": "2c5388b4",
    "metadata": {},
    "source": [
-    "#### Example With wav_stereo"
+    "#### Example with wav_stereo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "430913e6",
    "metadata": {},
    "outputs": [
@@ -516,12 +514,12 @@
    "id": "05e8bcef",
    "metadata": {},
    "source": [
-    "#### Example With flac_stereo"
+    "#### Example with flac_stereo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "f0e89030",
    "metadata": {},
    "outputs": [
@@ -552,7 +550,7 @@
    "id": "35a04752",
    "metadata": {},
    "source": [
-    "### Convert to 16KHZ flac with compression_level=5"
+    "### Convert to 16KHz FLAC with compression_level=5"
    ]
   },
   {
@@ -560,7 +558,7 @@
    "id": "fd29f2f9",
    "metadata": {},
    "source": [
-    "Using the Standardize() function, the following code block standardizes the example audio files to a sampling rate of 16,000 Hz, flac audio file format, flac out-encoding, and a compression level of 5."
+    "Using the standardize() function, the following code block standardizes the example audio files to a sampling rate of 16,000 Hz, flac audio file format, flac out-encoding, and a compression level of 5."
    ]
   },
   {
@@ -573,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "cc6908d8",
    "metadata": {},
    "outputs": [
@@ -611,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "4ba7c2d2",
    "metadata": {},
    "outputs": [
@@ -650,14 +648,14 @@
    "id": "19d17cbe",
    "metadata": {},
    "source": [
-    "The validate_files() function can be used to compare original sample output files with generated files using sha256. It outputs a csv containing comparison details.\n",
+    "The validate_files() function can be used to compare original sample output files with generated files using SHA-256. It outputs a CSV containing comparison details.\n",
     "\n",
-    "[View README](README.md) for more details on the contents of the output csv"
+    "[View README](https://github.com/Digital-Working-Group/voice-standardize/blob/main/pydub/README.md#validation) for more details on the contents of the output CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "dcb9453e",
    "metadata": {},
    "outputs": [],
@@ -667,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "cfb598a5",
    "metadata": {},
    "outputs": [
@@ -717,14 +715,6 @@
     "generate_comparison_files()\n",
     "validate_files()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6d72dd5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -743,7 +733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
