adjust README and remove sentence in notebook

--- a/pydub/voice_standardize_examples.ipynb
+++ b/pydub/voice_standardize_examples.ipynb
@@ -13,7 +13,7 @@
    "id": "df83e9af",
    "metadata": {},
    "source": [
-    "This repository contains scripts that show examples of how to use Pydub to standardize digital voice audio files with varying metadata to a standard format. It is part of a larger voice feature extraction toolkit developed to study brain ageing by means of voice features.\n"
+    "This repository contains scripts that show examples of how to use Pydub to standardize digital voice audio files with varying metadata to a standard format.\n"
    ]
   },
   {
